# wealth-simulator

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
src/wealth_simulator/: export.py  goals.py  sim.py  theme.py
tests/: test_csv_export.py  test_goals.py  test_smoke.py  test_theme.py
