[project]
name = "wealth-simulator"
version = "0.1.0"
description = "A simple wealth growth simulator with an interactive UI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.36",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
